force-app/main/default/objects/Historian_Config__mdt/Historian_Config__mdt.object-meta.xml
<CustomObject>
    <label>Historian Config</label>
    <pluralLabel>Historian Configs</pluralLabel>
</CustomObject>