force-app/main/default/objects/Historian_Config__mdt/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <label>Config Name</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>