force-app/main/default/objects/Historian_Config__mdt/fields/History_Object_Api__c.field-meta.xml
<CustomField>
    <fullName>History_Object_Api__c</fullName>
    <label>History Object API</label>
    <type>Text</type>
    <length>80</length>
</CustomField>