force-app/main/default/objects/Historian_Config__mdt/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object API Name</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>