force-app/main/default/objects/Historian_Config__mdt/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <label>Record Types</label>
    <inlineHelpText>Comma-separated list of Record Type Developer Names. Leave blank to apply to all record types.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>