force-app/main/default/objects/Historian_Config__mdt/fields/Track_Mode__c.field-meta.xml
<CustomField>
    <fullName>Track_Mode__c</fullName>
    <label>Track Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AllFields</fullName>
                <label>All Fields</label>
            </value>
            <value>
                <fullName>PerField</fullName>
                <label>Per Field</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>