force-app/main/default/objects/Historian_Config__mdt/fields/Tracking_Style__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Style__c</fullName>
    <label>Tracking Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Timeline</fullName>
            </value>
            <value>
                <fullName>Datatable</fullName>
            </value>
            <value>
                <fullName>CompactCards</fullName>
                <label>Compact Cards</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>